fix(number): switch to right align log numbers

--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -792,6 +792,10 @@ nav {
   width: 100%;
 }
 
+.log-table tr td:nth-child(2) {
+  padding-left: 1rem;
+}
+
 .logs .line {
   display: flex;
   align-items: flex-start;
@@ -809,19 +813,26 @@ nav {
   }
 }
 
-.line-number {
-  padding: 0;
+.log-table .line-number {
   position: relative;
-  color: var(--color-primary);
-  font-size: 14px;
   font-family: var(--font-code);
 
   background: none;
-  border: none;
 
   user-select: none;
 
+  text-align: right;
+  text-overflow: ellipsis;
+  text-decoration: none;
+  white-space: nowrap;
+  overflow: hidden;
+
   width: 6ch;
+
+  &:hover,
+  &:focus {
+    background-color: var(--color-bg);
+  }
 }
 
 .logs .-focus {
